backend pahse 1 partially completed

--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,9 @@ target/
 *.iws
 *.iml
 *.ipr
-
+application.yml
+application-dev.yml
+application-prod.yml
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
