--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=MatchScribe Backend
 spring.datasource.url=jdbc:postgresql://localhost:5432/sports_core_hub
 spring.datasource.username=app
-spring.datasource.password=postgre123
+spring.datasource.password=postgres123
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=none  
